# testci

./: CMakeLists.txt  Jenkinsfile  main.cpp
test/: test.cpp
